# tribunal-kit

./: .agent_session.json  .editorconfig  .gitignore  .npmignore  AGENT_FLOW.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  benchmark-results.json  clean.js  eslint.config.js  files_to_rewrite.txt  files_utf8.txt  fix_eslint.js  install.ps1  mcp_config.json  migrate_refs.js  npm_publish_log.txt  out.txt  pack.json  package-lock.json  package.json  publish_output.txt  scan_results.txt  scan_results_utf8.txt  skill-integration-report.md  staged_files.txt  tmp.txt  tribunal-kit-5.0.0.tgz  tsconfig.json  verify_results.txt  verify_results_utf8.txt
.agent/: ARCHITECTURE.md  GEMINI.md  routing_index.json
.agent/agents/: accessibility-reviewer.md  ai-code-reviewer.md  api-architect.md  backend-specialist.md  cloud-engineer.md  code-archaeologist.md  complexity-reviewer.md  database-architect.md  db-latency-auditor.md  debugger.md  dependency-reviewer.md  devops-engineer.md  documentation-writer.md  explorer-agent.md  (+30 more)
.gemini/: GEMINI.md  settings.json
crates/core/: Cargo.toml
crates/core/src/: main.rs
crates/core/src/commands/: memory.rs  mod.rs  optimize.rs
docs/: PLAN-blast-radius-simulator.md  PLAN-enhance-all-skills.md  PLAN-frontend-aesthetics.md  PLAN-security-skills.md  PLAN-swarm-supervisor.md  PLAN-tokenless-prompt.md  PLAN-unreleased-features.md  PLAN-v442.md  PLAN-vbc-skills-enhancement.md
scratch/: strengthen_skills.ps1
scripts/: benchmark.js  changelog.js  postinstall.js  sync-version.js  validate-payload.js
(+242 files in other folders)
