[package]
name = "tribunal-core"
version = "4.5.1"
edition = "2021"
description = "High-performance Rust core engine for Tribunal-Kit — strict schema validation, zero-hallucination CLI"
license = "MIT"

[[bin]]
name = "tribunal-core"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
owo-colors = "4.1"
indicatif = "0.17"
